# percona-mongolink

./: .editorconfig  .gitignore  .golangci.yml  CODEOWNERS  Makefile  README.md  go.mod  go.sum  heartbeat.go  main.go  pyproject.toml  recovery.go  todo.md
.github/workflows/: ci.yml  codeql.yml  e2etests.yml  go.yml  reviewdog.yml  trivy.yml
cmd/: main.go
config/: const.go  values.go
errors/: errors.go
list/: list.go
log/: log.go  mongo.go
metrics/: metrics.go
mlink/: catalog.go  clone.go  coord.go  event.go  repl.go
mongolink/: bulk.go  bulk_test.go  catalog.go  clone.go  copy.go  copy_test.go  doc.go  events.go  mongolink.go  repl.go
packaging/: repo.txt
packaging/conf/: percona-mongolink.env  percona-mongolink.service  plm.env  plm.service  pml.service
packaging/debian/: control  install  postinst  preinst  rules
packaging/plm_sbom/: plm_generate_sbom.sh
packaging/rpm/: percona-mongolink.spec  (+1 more)
plm/: bulk.go  bulk_test.go  catalog.go  clone.go  copy.go  copy_test.go  events.go  plm.go  repl.go
repl/: applier.go  catalog.go  clone.go  coord.go  crud.go  event.go  repl.go  sel.go  sel_test.go  util.go
sel/: sel.go  sel_test.go
tests/: _base.py  conftest.py  mlink.py  perf_test.go  plm.py  test_collection.py  test_collections.py  test_copy.py  test_crud.py  test_documents.py  test_index.py  test_indexes.py  test_selective.py  test_slow.py  test_transactions.py  testing.py
topo/: connect.go  connect_test.go  error.go  errors.go  schema.go  topo.go  topo_test.go  version.go  version_test.go
util/: context.go  list.go  sel.go  sel_test.go
(+26 files in other folders)
