[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pymongo = "^4.10.2"
pytest = "^8.3.5"
pytest-timeout = "^2.3.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
timeout = 15
