[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pymongo = "^4.12.1"
pytest = "^8.3.5"
pytest-timeout = "^2.4.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
timeout = 10
timeout_func_only = true
